--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
       <plugin>
       <artifactId>maven-assembly-plugin</artifactId>
       <configuration>
+      <finalName>reportApp</finalName>
         <archive>
           <manifest>
             <mainClass>task.table_renderer.Generator</mainClass>
@@ -30,6 +31,7 @@
         <descriptorRefs>
           <descriptorRef>jar-with-dependencies</descriptorRef>
         </descriptorRefs>
+        <appendAssemblyId>false</appendAssemblyId>
       </configuration>
     </plugin>
         
